# ouroboros

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  LICENSE-BSD  LICENSE-LGPL  README  VERSION  appveyor.yml  compile_debug.sh  compile_release.sh  enc.conf.in  install_debug.sh  install_release.sh  irmd.conf.in  ouroboros-dev.pc.in  ouroboros-irm.pc.in  ouroboros.pc.in  ouroboros.service.in
doc/man/: CMakeLists.txt  ap_fini.3  ap_init.3  fccntl.3  fevent.3  flow_accept.3  flow_alloc.3  flow_read.3  flow_write.3  fqueue.3  fset.3  fset_has.3  irmd.8  ouroboros-glossary.7  ouroboros-tutorial.7  ouroboros.8  ouroboros_fini.3  ouroboros_init.3
include/ouroboros/: CMakeLists.txt  bitmap.h  btree.h  cacep.h  cdap.h  cdefs.h  cep.h  common.h  config.h.in  crc32.h  crypt.h  da.h  dev.h  dif_config.h  du_buff.h  endian.h  errno.h  fccntl.h  fcntl.h  flow.h  fqueue.h  frct_pci.h  hash.h  hashtable.h  instance_name.h  ipcp-dev.h  ipcp.h  irm.h  irm_config.h  list.h  local-dev.h  lockfile.h  logs.h  md5.h  name.h  notifier.h  np1_flow.h  nsm.h  proc.h  proto.h  (+33 more)
include/ouroboros/wrap/: CMakeLists.txt  ouroboros.i
src/da/: CMakeLists.txt  main.c
src/dad/: CMakeLists.txt
src/ipcpd/: CMakeLists.txt  config.h.in  dt_const.h  flow.c  flow.h  ipcp-data.c  ipcp-data.h  ipcp-ops.h  ipcp.c  ipcp.h  main.c  np1.h  pci.c  pci.h  shim-data.c  shim-data.h  shm_pci.c  timerwheel.c  timerwheel.h
src/ipcpd/broadcast/: CMakeLists.txt  comp.h  connmgr.c  connmgr.h  dt.c  dt.h  enroll.c  enroll.h  main.c
src/ipcpd/common/: comp.h  connmgr.c  connmgr.h  enroll.c  enroll.h
src/ipcpd/eth/: CMakeLists.txt  dix.c  eth.c  llc.c
src/ipcpd/eth-llc/: CMakeLists.txt  main.c
src/ipcpd/local/: CMakeLists.txt  main.c
src/ipcpd/normal/: CMakeLists.txt  addr_auth.c  addr_auth.h  ae.h  cdap_flow.c  cdap_flow.h  cdap_request.c  cdap_request.h  comp.h  config.h  connmgr.c  connmgr.h  crc32.c  crc32.h  dht.c  dht.h  dir.c  dir.h  dt.c  dt.h  dt_const.h  dt_pci.c  dt_pci.h  enroll.c  enroll.h  enroll.proto  fa.c  fa.h  flat.c  flow_alloc.proto  fmgr.c  fmgr.h  frct.c  frct.h  frct_pci.c  frct_pci.h  gam.c  gam.h  graph.c  graph.h  (+33 more)
src/ipcpd/raptor/: CMakeLists.txt  main.c  raptor_messages.proto
src/ipcpd/shim-eth-llc/: CMakeLists.txt  main.c  shim_eth_llc_messages.proto
src/ipcpd/shim-udp/: CMakeLists.txt  main.c  shim_udp_config.h.in  shim_udp_messages.proto
src/ipcpd/tests/: CMakeLists.txt  timerwheel_test.c
src/ipcpd/udp/: CMakeLists.txt  main.c  udp.c  udp4.c  udp6.c
src/ipcpd/unicast/: CMakeLists.txt  addr-auth.c  addr-auth.h  addr_auth.c  addr_auth.h  ca.c  ca.h  comp.h  connmgr.c  connmgr.h  dht.c  dht.h  dir.c  dir.h  dt.c  dt.h  enroll.c  enroll.h  fa.c  fa.h  kademlia.proto  main.c  pff.c  pff.h  pol-addr-auth-ops.h  pol-ca-ops.h  pol-pff-ops.h  pol-routing-ops.h  psched.c  psched.h  routing.c  routing.h
src/irmd/: CMakeLists.txt  api_table.c  api_table.h  apn_table.c  apn_table.h  config.h.in  configfile.c  configfile.h  ipcp.c  ipcp.h  irm_flow.c  irm_flow.h  irmd.h  main.c  oap.c  oap.h  proc_table.c  proc_table.h  prog_table.c  prog_table.h  reg_api.c  reg_api.h  registry.c  registry.h  utils.c  utils.h
src/irmd/oap/: auth.c  auth.h  cli.c  hdr.c  hdr.h  internal.h  io.c  io.h  srv.c
src/irmd/reg/: CMakeLists.txt  flow.c  flow.h  ipcp.c  ipcp.h  name.c  name.h  pool.c  pool.h  proc.c  proc.h  prog.c  prog.h  reg.c  reg.h
src/irmd/tests/: CMakeLists.txt  irm_test.c  oap_test.c
src/lib/: .gitignore  CMakeLists.txt  bitmap.c  btree.c  btree.h  byte_order.h  cacep.c  cacep.proto  cdap.c  cdap.proto  cdap_req.c  cdap_req.h  cep.c  config.h.in  crc32.c  crypt.c  da.c  dev.c  dif_config.proto  du_buff.c  enroll.proto  flow.c  frct.c  frct_enroll.proto  frct_pci.c  frct_pci.h  hash.c  hashtable.c  instance_name.c  ipcp.c  ipcp_config.proto  ipcpd_messages.proto  irm.c  irmd_messages.proto  list.c  lockfile.c  logs.c  md5.c  notifier.c  nsm.c  (+28 more)
src/lib/crypt/: openssl.c  openssl.h
src/lib/pb/: cacep.proto  cep.proto  enroll.proto  ipcp.proto  ipcp_config.proto  irm.proto  model.proto  qos.proto
src/lib/pol/: cacep_anonymous_auth.c  cacep_anonymous_auth.h  cacep_anonymous_auth.proto  cacep_proto.c  cacep_proto.h  cacep_proto.proto  cacep_simple_auth.c  cacep_simple_auth.h  cacep_simple_auth.proto
src/lib/ssm/: flow_set.c  pool.c  rbuff.c  ssm.h.in
src/lib/tests/: CMakeLists.txt  auth_test.c  auth_test_ml_dsa.c  auth_test_pqc.c  auth_test_slh_dsa.c  bitmap_test.c  btree_test.c  crc32_test.c  crypt_test.c  du_buff.c  du_buff_test.c  hash_test.c  hashtable_test.c  kex_test.c  kex_test_ml_kem.c  kex_test_pqc.c  linked_list.c  md5_test.c  rib_test.c  rq_test.c  sha3_test.c  shm_du_map_test.c  shm_du_map_test_create.c  shm_du_map_test_du_buff_create.c  shm_du_map_test_prod_cons.c  shm_rbuff_test.c  sockets_test.c  time_test.c  time_utils_test.c  timerwheel_test.c  tpm_test.c
src/nsmd/: CMakeLists.txt  main.c
src/nsmd/tests/: CMakeLists.txt
src/tools/: CMakeLists.txt  time_utils.h
src/tools/cbr/: CMakeLists.txt  cbr.c  cbr_client.c  cbr_server.c
src/tools/echo/: CMakeLists.txt  echo.c  echo_client.c  echo_server.c
src/tools/irm/: CMakeLists.txt  irm.c  irm_bind.c  irm_bind_ap.c  irm_bind_api.c  irm_bind_ipcp.c  irm_bind_process.c  irm_bind_program.c  irm_bootstrap_ipcp.c  irm_create_ipcp.c  irm_destroy_ipcp.c  irm_enroll_ipcp.c  irm_ipcp.c  irm_ipcp_bootstrap.c  irm_ipcp_connect.c  irm_ipcp_create.c  irm_ipcp_destroy.c  irm_ipcp_disconnect.c  irm_ipcp_enroll.c  irm_ipcp_list.c  irm_name.c  irm_name_create.c  irm_name_destroy.c  irm_name_list.c  irm_name_reg.c  irm_name_unreg.c  irm_ops.h  irm_register.c  irm_register_ipcp.c  irm_unbind.c  irm_unbind_ap.c  irm_unbind_api.c  irm_unbind_ipcp.c  irm_unbind_process.c  irm_unbind_program.c  irm_unregister.c  irm_unregister_ipcp.c  irm_utils.c  irm_utils.h  main.c
src/tools/obc/: CMakeLists.txt  obc.c
src/tools/ocbr/: CMakeLists.txt  ocbr.c  ocbr_client.c  ocbr_server.c
src/tools/oecho/: CMakeLists.txt  oecho.c
src/tools/operf/: CMakeLists.txt  operf.c  operf_client.c  operf_server.c
src/tools/oping/: CMakeLists.txt  oping.c  (+2 more)
(+213 files in other folders)
